feat(弹窗文案控制): 新增弹窗文案控制

--- a/tag-manager/index.html
+++ b/tag-manager/index.html
@@ -1,4 +1,4 @@
-<nz-modal [(nzVisible)]="isVisible" nzTitle="标签管理" [nzMaskClosable]="false" [nzZIndex]="5" nzWidth="500"
+<nz-modal [(nzVisible)]="isVisible" [nzTitle]="label+'管理'" [nzMaskClosable]="false" [nzZIndex]="5" nzWidth="500"
   [nzContent]="tagContent" (nzOnCancel)="handleClose()" (nzOnOk)="handleClose()">
   <!--标签管理-->
   <ng-template #tagContent>
@@ -6,7 +6,7 @@
       <button style="float: left" nz-button (click)="selectedRow={};addOrEditTag(tagModalContent,'add')"
         [disabled]="data?.length === 10" [nzType]="'primary'">
         <i nz-icon nzType="plus"></i>
-        <span>新增标签</span>
+        <span>新增{{label}}</span>
       </button>
     </p>
     <st #tagSt [data]="data" [total]="total" [ps]="query.pageSize" [pi]="query.pageNo" [columns]="columns"
@@ -17,8 +17,8 @@
 <!--新增编辑标签-->
 <ng-template #tagModalContent>
   <form nz-form se-container labelWidth="130">
-    <se label="标签名" col="1" required>
-      <input nz-input [(ngModel)]="selectedRow.name" name="name" />
+    <se [label]="label+'名'" col="1" required>
+      <input nz-input placeholder="请输入" [(ngModel)]="selectedRow.name" name="name" />
     </se>
   </form>
 </ng-template>
